2004-07-17  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_mup.c: Fix compilation.

	* rtai-core/sched/rtai/sched_*.c: Always escalate the rescheduling
	requests to the RTAI domain as needed; this closes a long-standing
	race window where Linux interrupts might be served on a non-Linux
	stack.

	* rtai-core/sched/rtai/sched_lxrt.c (put_current_on_cpu): Use the
	direct kernel interface (set_cpus_allowed()) for setting the
	scheduling affinity of the current task. Do _not_ mess anymore with the
	'cpus_allowed' member of the Linux task struct with v2.6.

2004-07-14  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c (intr_get_current): Iron the
	Adeos-aware code retrieving the current linux task.

	* rtai-core/sched/rtai/sched_lxrt.c (rt_timer_handler,
	rt_schedule, rt_schedule_on_schedule_ipi): Mask interrupts at
	hardware-level during core scheduling operations.
	
2004-07-12  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/*: Directory files modified for Scilab-3.0

2004-07-12  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade the x86 patch to
	2.6.7r6c2.

2004-07-07  Wolfgang Grandegger  <wolfgang.grandegger@bluewin.ch>

	* rtai-core: A first version of RTAI over ADEOS on PowerPC
	has been added. The legacy RTAI (RTHAL) is still available.

2004-07-07  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/scripts/rtai-load.in: Use "ls" instead of "file" to
	work around busybox's shortcomings.

2004-07-05  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/Kconfig: Make RTAI_MATH depend on
	RTAI_FPU_SUPPORT.

	* configure.in: Kludge:: Allow for configuration of 8254 and PIC
	latency figures in non-x86 mode, since we need them for non-UP
	scheds.

2004-07-01  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/malloc/malloc.c (rtheap_destroy): Kludge:: make sure
	the global heap memory is properly released.

2004-06-30  Philippe Gerum  <rpm@xenomai.org>
